# golden-frame-web

./: .dockerignore  .gitignore  .prettierrc.js  CHANGELOG.md  Dockerfile  LICENSE  README.md  astro.config.mjs  package.json  pnpm-lock.yaml  pyproject.toml  static.py
.github/workflows/: release.yml
server/: app.py  env.py  lib.py  middlewares.py  routes.py  server.py  utils.py
src/components/: GoldenFrame.module.scss  GoldenFrame.svelte
src/layouts/: Layout.astro
src/pages/: index.astro
