[tool.poetry]
name = "golden-frame-web"
version = "3.1.0"
description = "Golden Frame Generator Website"
authors = [
  "Nutthapat Pongtanyavichai <59821765+Leomotors@users.noreply.github.com>",
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
golden-frame = "^2.1.71"
Flask = "^3.0.0"
waitress = "^2.1.2"
flask-limiter = { extras = ["memcached"], version = "^3.5.0" }

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.4"
flask-cors = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
